getProperties returns ImmutableList